--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="prev" @click="prevSlide"></div>
                     <div class="next" @click="nextSlide"></div>
                     <div class="thumb" :class="{'active': index === activeSlide}" v-for="(slide,index) in slides"
-                        :key="index">
+                        :key="index" @mouseover="stopSlider" @mouseleave="startSlider">
                         <img :src="slide.image" :alt="slide.title" />
                     </div>
 
