--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 
-    <div id="app">
+    <div id="app" class="">
+
 
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
@@ -27,8 +28,8 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev" @click="prevSlide"></div>
-                    <div class="next" @click="nextSlide"></div>
+                    <div class="prev" @click="prevSlide" @mouseover="stopSlider" @mouseleave="startSlider"></div>
+                    <div class="next" @click="nextSlide" @mouseover="stopSlider" @mouseleave="startSlider"></div>
                     <div class="thumb" :class="{'active': index === activeSlide}" v-for="(slide,index) in slides"
                         :key="index" @mouseover="stopSlider" @mouseleave="startSlider">
                         <img :src="slide.image" :alt="slide.title" />
